fix: align problem for main inputs on detail page

--- a/src/styles/pages/bookingdetail.scss
+++ b/src/styles/pages/bookingdetail.scss
@@ -433,3 +433,11 @@ input.orange-color {
 	background: lightgray;
 	cursor: not-allowed;
 }
+
+.main-form-group {
+	>div, >input {
+		height: 40px;	
+	}
+
+
+}
